--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,8 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR4"
     }
 }
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
