--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,7 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-hystrix')
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile "org.springframework.cloud:spring-cloud-contract-wiremock"
-    testCompile "org.springframework.cloud:spring-cloud-starter-contract-stub-runner"
+    testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
 }
 
 dependencyManagement {
@@ -42,6 +41,7 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR4"
     }
 }
+
 jacocoTestReport {
     reports {
         xml.enabled true
